# notion2doist

./: Procfile  app.py  development.ipynb  pyproject.toml  requirements.txt  setup.py  tools.py  zappa_settings.json
.ipynb_checkpoints/: development-checkpoint.ipynb
notebooks/: development.ipynb
notebooks/.ipynb_checkpoints/: development-checkpoint.ipynb
notion2doist/: app.py  mongo.py  tools.py
