[tool.poetry]
name = "notion-to-doist"
version = "0.1.0"
description = "A hacked-together two-way sync between a Notion relational database and a todoist account."
authors = ["Jarred Green <astrojarred@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
Flask = "^1.1.2"
todoist-python = "^8.1.2"
notion-py = "^0.0.6"
bidict = "^0.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
