[tool.poetry]
name = "notion-to-doist"
version = "0.1.0"
description = ""
authors = ["Jarred Green <astrojarred@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
notion = "^0.0.25"
bidict = "^0.21.2"
todoist-python = "^8.1.2"
zappa = "^0.52.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
